--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "nuxt dev",
     "deploy": "npm run deploy:pages",
     "deploy:pages": "wrangler pages deploy dist",
-    "deploy:worker": "wrangler deploy",
+    "deploy:worker": "npm run build && wrangler deploy",
     "preview": "wrangler dev --var $(cat .env | sed 's/=/:/g')",
     "test": "vitest",
     "db:generate": "drizzle-kit generate"
